networkpolicy/1/pod-agent.yaml
apiVersion: v1
kind: Pod
metadata:
  name: agent
  namespace: firewall
  labels:
    app: agent
spec:
  containers:
    - name: agent
      image: busybox
      command: ["sh", "-c", "sleep 36000"]
