networkpolicy/1/pod-backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: firewall
  labels:
    app: backend
  spec:
    containers:
      - name: backend
        image: 1pro/exam
        ports:
          - containerPort: 8080
