networkpolicy/1/pod-db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db
  namespace: firewall
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: 1pro/exam
          ports:
            - containerPort: 8080
