networkpolicy/1/pod-front.yaml
apiVersion: v1
kind: Pod
metadata:
  name: front
  namespace: firewall
spec:
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: 1pro/exam
          ports:
            - containerPort: 8080
