networkpolicy/1/networkpolicy-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-all
  namespace: firewall
spec:
  podSelector:
    matchLabels:
      all-access: "true"
  policyTypes:
  - Ingress
  - Egress
  egress: []
  ingress: []
