networkpolicy/1/networkpolicy-db-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-db
  namespace: firewall
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          access-all: "true"
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access-all: "true"
