networkpolicy/1/networkpolicy-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: firewall
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: []
